fix am img spacing

--- a/app/assets/stylesheets/api/Guests/Guests.scss
+++ b/app/assets/stylesheets/api/Guests/Guests.scss
@@ -1,22 +1,30 @@
 .img-grid {
-  margin: 20px auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 40px;
+  // margin: 20px auto;
+  // display: grid;
+  // grid-template-columns: 1fr 1fr 1fr;
+  // grid-gap: 40px;
+
+  -webkit-column-count: 3;
+  -moz-column-count: 3;
+  column-count: 3;
+  -webkit-column-width: 33%;
+  -moz-column-width: 33%;
+  column-width: 33%;
+  padding: 0 12px
 }
 .img-wrap {
-  overflow: hidden;
-  height: 0;
-  padding: 50% 0;
-  /* padding controls height, will always be perfectly square regardless of width */
-  position: relative;
-  opacity: 0.8;
+  // overflow: hidden;
+  // height: 0;
+  // padding: 50% 0;
+  // /* padding controls height, will always be perfectly square regardless of width */
+  // position: relative;
+  // opacity: 0.8;
 }
-.img-wrap img {
-  min-width: 100%;
-  min-height: 100%;
-  max-width: 150%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
+// .img-wrap img {
+//   min-width: 100%;
+//   min-height: 100%;
+//   max-width: 150%;
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+// }
